--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -813,6 +813,26 @@
                   />
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="certificate">
+          <div class="container">
+            <div class="certificate__body">
+              <h2 class="certificate__title title">Продукция сертифицирована</h2>
+              <div class="certificate__img">
+                <img src="img/sertificate/sertificate.jpg" alt="img">
+                <div class="sertificate__button">
+                  <button class="btn">Посмотреть документы</button>
+                </div>
+              </div>
+              <div class="sertificate__box">
+                <div class="sertificate__descr">
+                  Больше подробной информации о производстве и преимуществах продукции в презентации франшизы «Банивам»
+                </div>
+                <img src="img/sertificate/arrow.svg" alt="arrow">
+              </div>
+              <img src="img/sertificate/line.svg" alt="line" class="sertificate__line">
             </div>
           </div>
         </section>
