--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="scss/reset.css" />
     <link rel="stylesheet" href="scss/style.css" />
     <link rel="stylesheet" href="scss/slick.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
+    />
     <title>Франшиза по изготовлению бань-бочек</title>
   </head>
   <body id="main-body">
@@ -765,11 +769,13 @@
                       огнебиозащитным раствором финского производства</span
                     >
                   </div>
-                  <img
-                    src="img/slider/01.png"
-                    alt="slider"
-                    class="slider__img"
-                  />
+                  <div class="slider__image">
+                    <img
+                      src="img/slider/01.png"
+                      alt="slider"
+                      class="slider__img"
+                    />
+                  </div>
                 </div>
                 <div class="slider__item">
                   <div class="slider__text">
@@ -778,12 +784,13 @@
                       станке, исключающем фактор человеческой ошибки</span
                     >
                   </div>
-
-                  <img
-                    src="img/slider/02.png"
-                    alt="slider"
-                    class="slider__img"
-                  />
+                  <div class="slider__image">
+                    <img
+                      src="img/slider/02.jpg"
+                      alt="slider"
+                      class="slider__img"
+                    />
+                  </div>
                 </div>
                 <div class="slider__item">
                   <div class="slider__text">
@@ -792,12 +799,13 @@
                       светильник</span
                     >
                   </div>
-
-                  <img
-                    src="img/slider/03.png"
-                    alt="slider"
-                    class="slider__img"
-                  />
+                  <div class="slider__image">
+                    <img
+                      src="img/slider/03.jpg"
+                      alt="slider"
+                      class="slider__img"
+                    />
+                  </div>
                 </div>
                 <div class="slider__item">
                   <div class="slider__text">
@@ -806,11 +814,13 @@
                       доски для комфортной эксплуатации в зимний период</span
                     >
                   </div>
-                  <img
-                    src="img/slider/04.png"
-                    alt="slider"
-                    class="slider__img"
-                  />
+                  <div class="slider__image">
+                    <img
+                      src="img/slider/04.jpg"
+                      alt="slider"
+                      class="slider__img"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
@@ -819,20 +829,287 @@
         <section class="certificate">
           <div class="container">
             <div class="certificate__body">
-              <h2 class="certificate__title title">Продукция сертифицирована</h2>
+              <h2 class="certificate__title title">
+                Продукция сертифицирована
+              </h2>
               <div class="certificate__img">
-                <img src="img/sertificate/sertificate.jpg" alt="img">
+                <img src="img/sertificate/sertificate.jpg" alt="img" />
                 <div class="sertificate__button">
-                  <button class="btn">Посмотреть документы</button>
+                  <a
+                    data-fancybox
+                    href="img/sertificate/fancyimg.jpeg"
+                    data-width="1000"
+                    data-height="700"
+                    class="btn"
+                    >Посмотреть документы</a
+                  >
                 </div>
               </div>
               <div class="sertificate__box">
                 <div class="sertificate__descr">
-                  Больше подробной информации о производстве и преимуществах продукции в презентации франшизы «Банивам»
+                  Больше подробной информации о производстве и преимуществах
+                  продукции в презентации франшизы «Банивам»
                 </div>
-                <img src="img/sertificate/arrow.svg" alt="arrow">
+                <img src="img/sertificate/arrow.svg" alt="arrow" />
               </div>
-              <img src="img/sertificate/line.svg" alt="line" class="sertificate__line">
+              <img
+                src="img/sertificate/line.svg"
+                alt="line"
+                class="sertificate__line"
+              />
+            </div>
+          </div>
+        </section>
+        <section class="videos">
+          <div class="container">
+            <div class="videos__body">
+              <h2 class="videos__title title">
+                Видеообзоры продукции «Банивам»
+              </h2>
+              <p class="videos__descr descr">
+                Головная компания регулярно создаёт видеоконтент в соцсетях о
+                технических особенностях, преимуществах бань и других товаров
+                для повышения лояльности среди потенциальных клиентов.
+              </p>
+              <ul class="videos__list">
+                <li class="videos__item">
+                  <a
+                    data-fancybox
+                    href="https://youtu.be/J2j32WR7o_E"
+                    data-width="1000"
+                    data-height="700"
+                  >
+                    <div class="videos__video">
+                      <img src="img/videos/01.jpg" alt="video" />
+                      <div class="videos__circle"></div>
+                    </div>
+                  </a>
+                  <div class="videos__item-descr">
+                    Баня «Люкс» <span>4 м на 2,4 м </span>
+                  </div>
+                </li>
+                <li class="videos__item">
+                  <a
+                    data-fancybox
+                    href="https://www.youtube.com/watch?v=LfG2M-nEjfY"
+                    data-width="1000"
+                    data-height="700"
+                    ><div class="videos__video">
+                      <img src="img/videos/02.jpg" alt="video" />
+                      <div class="videos__circle"></div></div
+                  ></a>
+
+                  <div class="videos__item-descr">
+                    Баня «Финляндия» <span>4 м на 2,4 м</span>
+                  </div>
+                </li>
+                <li class="videos__item">
+                  <a
+                    data-fancybox
+                    href="https://www.youtube.com/watch?v=yvOE6GHgxho"
+                    data-width="1000"
+                    data-height="700"
+                    ><div class="videos__video">
+                      <img src="img/videos/03.jpg" alt="video" />
+                      <div class="videos__circle"></div></div
+                  ></a>
+
+                  <div class="videos__item-descr">
+                    Баня «Югория»<span>5,5 м на 2,4 м</span>
+                  </div>
+                </li>
+                <li class="videos__item">
+                  <a
+                    data-fancybox
+                    href="https://www.youtube.com/watch?v=08bjWCB3h-c"
+                    data-width="1000"
+                    data-height="700"
+                  >
+                    <div class="videos__video">
+                      <img src="img/videos/01.jpg" alt="video" />
+                      <div class="videos__circle"></div></div
+                  ></a>
+
+                  <div class="videos__item-descr">
+                    Обзор и отзыв от<span>клиента</span>
+                  </div>
+                </li>
+              </ul>
+              <div class="videos__bottom">
+                <img src="img/videos/left.svg" alt="line" class="left-line" />
+                <p class="videos__text">
+                  Полноценный обзор помогает привлекать внимание будущих
+                  покупателей, чтобы они по достоинству оценили продукцию и
+                  совершили заказ.
+                </p>
+                <img src="img/videos/right.svg" alt="line" class="right-line" />
+              </div>
+              <img
+                src="img/videos/top-line.svg"
+                alt="img"
+                class="videos__line"
+              />
+            </div>
+          </div>
+        </section>
+        <section class="study">
+          <div class="container">
+            <div class="study__body">
+              <h2 class="study__title title">
+                Обучение, передача технологий производства и помощь с открытием
+                точки
+              </h2>
+              <p class="study__descr descr">
+                Эксперты головной компании передадут накопленные знания и
+                богатый опыт для сокращения временных и финансовых ресурсов для
+                запуска производства продукции с дальнейшей её реализацией.
+              </p>
+              <ul class="study__list">
+                <li class="study__item">
+                  <div class="study__box">
+                    <h5 class="study__box-title">
+                      №1. Обучение тонкостям и нюансам бизнеса
+                    </h5>
+                    <p class="study__box-text">
+                      Головная компания передаст регламенты, проконсультирует по
+                      ценностям, миссии и стратегии сети «Банивам». Проведёт
+                      онлайн-конференцию с разъяснениями по технологии
+                      производства, правилах транспортировки и установки бань.
+                      Передаст сценарии продаж, инструкции для ведения учёта,
+                      найма и контроля качества работы сотрудников.
+                    </p>
+                  </div>
+                  <div class="study__img">
+                    <img src="img/study/01.jpg" alt="img" />
+                  </div>
+                </li>
+                <li class="study__item">
+                  <div class="study__box">
+                    <h5 class="study__box-title">№2. Передача ноу-хау</h5>
+                    <p class="study__box-text">
+                      При изготовлении бань учитываются не только
+                      технологические и эксплуатационные характеристики, но и
+                      требования к безопасному и долговечному использованию.
+                      Головная компания передаст видеоинструкции с регламентами
+                      по производству качественной продукции.
+                    </p>
+                  </div>
+                  <div class="study__img">
+                    <img src="img/study/02.jpg" alt="img" />
+                  </div>
+                </li>
+                <li class="study__item">
+                  <div class="study__img">
+                    <img src="img/study/03.jpg" alt="img" />
+                  </div>
+                  <div class="study__box">
+                    <h5 class="study__box-title">
+                      №3. Помощь с открытием точки
+                    </h5>
+                    <p class="study__box-text">
+                      Специалисты предоставят доступ в корпоративный чат для
+                      оперативных коммуникаций по всем возникающим рабочим
+                      процессам.
+                    </p>
+                    <p class="study__box-text">
+                      Для изучения технологии изготовления и дальнейшей
+                      наглядной демонстрации товара клиентам будет организована
+                      первичная поставка 2 комплектов бань-бочек в близлежащие
+                      регионы (по запросу, с финансированием со стороны
+                      франчайзи-партнёра).
+                    </p>
+                    <p class="study__box-text">
+                      Маркетинговый отдел головной компании создаст сайт и
+                      первично наполнит его контентом с дальнейшим
+                      SEO-продвижением. С помощью контекстной рекламы головной
+                      офис соберёт 30 заявок, обработает и передаст партнёру в
+                      работу. Первично наполнит аккаунты в соцсетях, настроит и
+                      запустит таргетированную рекламу.
+                    </p>
+                  </div>
+                </li>
+              </ul>
+              <div class="study__bottom">
+                <div class="study__bottom-container">
+                  <div class="study__bottom-descr">
+                    Узнайте от собственника больше подробностей о помощи при
+                    запуске бизнеса
+                  </div>
+                  <img src="img/study/right-line.svg" alt="line" />
+                  <div class="study__cover">
+                    <button class="btn">Связаться с собственником</button>
+                  </div>
+                </div>
+              </div>
+              <img src="img/study/line.svg" alt="line" class="study__line" />
+            </div>
+          </div>
+        </section>
+        <section class="marketing">
+          <div class="container">
+            <div class="marketing__body">
+              <h2 class="marketing__title title">
+                Маркетинговое продвижение
+                <span>с использованием эффективных инструментов</span>
+              </h2>
+              <p class="marketing__descr descr">
+                Маркетологи головной компании заинтересованы в масштабировании
+                сети, поэтому берут на себя проведение PR-кампании для
+                обеспечения заявками каждой франчайзинговой точки.
+              </p>
+              <ul class="marketing__list">
+                <li class="marketing__item">
+                  <img
+                    src="img/marketing/01.svg"
+                    alt="icon"
+                    class="marketing__icon"
+                  />
+                  <p class="marketing__item-text">
+                    Ведение каналов на YouTube и TikTok
+                    <span>с дальнейшем распределением заявок по</span>
+                    соответствующим регионам.
+                  </p>
+                </li>
+                <li class="marketing__item">
+                  <img
+                    src="img/marketing/02.svg"
+                    alt="icon"
+                    class="marketing__icon"
+                  />
+                  <p class="marketing__item-text">
+                    Создание и передача
+                    <span>контента для наполнения</span> аккаунтов в соцсетях.
+                  </p>
+                </li>
+                <li class="marketing__item">
+                  <img
+                    src="img/marketing/03.svg"
+                    alt="icon"
+                    class="marketing__icon"
+                  />
+                  <p class="marketing__item-text">
+                    Ведение таргетированной рекламы
+                    <span>с финансированием со стороны партнёра,</span>
+                    последующая передача заявок.
+                  </p>
+                </li>
+              </ul>
+              
+              <img
+                src="img/marketing/image.png"
+                alt="image"
+                class="marketing__image"
+              />
+              <div class="marketing__text">
+                Следование маркетинговой стратегии, проверенной за 3 года
+                работы, и применение эффективных инструментов помогают быстро
+                увеличивать клиентскую базу и объёмы продаж.
+              </div>
+              <img
+                src="img/marketing/line.svg"
+                alt="image"
+                class="marketing__line"
+              />
             </div>
           </div>
         </section>
@@ -843,5 +1120,6 @@
     <script src="js/slick.min.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/tab.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   </body>
 </html>
